--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- MAIN APP -->
+    <div class="todo-app">
+        <header>
+            <h1>BatList</h1>
+            <div class="logo"><img src="./img/batman-4.svg" alt=""></div>
+        </header>
+        <main>
+            <input type="text" placeholder="Inserire BatCompito">
+            <ul class="todo-list"></ul>
+        </main>
+
+        <!-- TEMPLATE -->
+        <div id="template" style="display: none;">
+            <li>
+                <div class="text">test</div>
+                <i class="fas fa-minus-circle"></i>
+            </li>
+        </div>
+
+    </div>
    
     <!-- JS -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js' integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==' crossorigin='anonymous'></script>
